bynkc/tests/fixtures/positive/188_bynk_secrets_workers/src/shop/orders.karn
context shop.orders

consumes bynk { Secrets }

service ordering {
  on call(sku: String) -> Effect[String] given Secrets {
    let key <- Secrets.get("API_KEY")
    match key {
      Some(k) => k,
      None => "missing",
    }
  }
}
